Bug: 61737 61736 Increase video size and overlay play icon on thumbnail
http://bugzilla.zimbra.com/show_bug.cgi?id=61737
http://bugzilla.zimbra.com/show_bug.cgi?id=61736

Copied from Perforce
 Change: 321588

--- a/src/zimlet/com_zimbra_url/url.css
+++ b/src/zimlet/com_zimbra_url/url.css
@@ -9,3 +9,23 @@
    background-color: black;
    display: inline-block;
 }
+
+.thumb-wrapper {
+position:relative;
+float: left;
+}
+
+.play {
+position:absolute;
+float: left;
+top: 30px;
+left: 35px;
+width: 58;
+height: 41;
+z-index: 100;
+background: transparent url(play_youtube.png) no-repeat;
+}
+
+.movie-player {
+clear: both;
+}
