bug:56096 Make selection experience consistent across attachment dialog
http://bugzilla.zimbra.com/show_bug.cgi?id=56096

Copied from Perforce
 Change: 322829

--- a/src/zimlet/com_zimbra_attachcontacts/attachcontacts.css
+++ b/src/zimlet/com_zimbra_attachcontacts/attachcontacts.css
@@ -11,3 +11,10 @@ table.AttachContacts_table input[type="text"]{
 	height:20px;
 	padding:2px 4px;
 }
+
+.AttachContactRow {
+    border-style: solid;
+    border-width: 1px 0;
+    cursor: pointer;
+    border-color: #E0E0E0;
+}
