--- a/src/zimlet/com_zimbra_attachmail/attachmail.css
+++ b/src/zimlet/com_zimbra_attachmail/attachmail.css
@@ -1,26 +1,35 @@
 .Imgattachmail-panelIcon {
-  background: url("attachmail.gif") no-repeat 0 0;
-  width: 16px;
-  height: 16px;
-  overflow: hidden;
+    background: url("attachmail.gif") no-repeat 0 0;
+    width: 16px;
+    height: 16px;
+    overflow: hidden;
 }
 
 .AttachMailTabBox {
-	background-color:#FDFCFA;
+    background-color: #FDFCFA;
 }
 
 .AttachMailRowDiv {
-height:70px;border-style:solid;border-width:1px 0;cursor:pointer;border-color:#E0E0E0;
+    height: 90px;
+    border-style: solid;
+    border-width: 1px 0;
+    cursor: pointer;
+    border-color: #E0E0E0;
 }
 
 .AttachMailSubject {
-font-weight:bold;font-size:13px;color:#2B2A2B;
+    font-weight: bold;
+    font-size: 13px;
+    color: #2B2A2B;
 }
+
 .AttachMailFrom {
-    font-weight:bold;font-size:11px;color:#2B2A2B;
+    font-weight: bold;
+    font-size: 11px;
+    color: #2B2A2B;
 }
 
 .AttachMailFrag {
-overflow:hidden;
-    color:gray;
+    overflow: hidden;
+    color: gray;
 }
